@@ -10,6 +10,9 @@ Changes in version 1.010
 
 - All the CRC tables are now generated at build time.
 
+- Split the case insensitive parts of the str_glob and str_match
+  functions into str_case_glob and str_case_match respectively.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
